
Changelog
=========

1.2.0 (unreleased)
------------------

- Moves the core to a new, plone-independent Python Module (Libres). 
  [href]

1.1.5 (2014-09-23)
------------------

- Changes export/report/latest permissions on the actions to reflect the
  actual permissions needed to open these views. Fixes #164.
  [href]

- Fixes last day not being included in the monthlry report. Closes #163.
  [href]

- Adds email template validation. Closes #156.
  [href]

- Fixes export error when using a unicode character in the resource title.
  Closes #165.
  [href]

- Spell email as 'E-Mail' in German - always. Fixes #166.
  [href]

1.1.4 (2014-08-18)
------------------

- Fixes allocation search not working correctly with partly available whole-day
  allocations. Closes #162.
  [href]

1.1.3 (2014-08-15)
------------------

- Fixes wrong times being used for whole day reservations in the search.
  [href]

- Changes search view to be way more ajaxy, giving the impression of a speedup.
  [href]

- Adds the ability to delete allocations found when searching. Fixes #161.
  [href]

1.1.2 (2014-08-12)
------------------

- Adds the ability to change the times of certain reservations.
  [href]

- Correctly deals with group-allocations in the search view.
  [href]

- Disable the reservation button if no selection is made in the search
  view.
  [href]

- Adds the ability to change the email address of a reservation.
  [href]

- Ensure that the session data is never shared between browsers, even if
  the same user is logged in.
  [href]

- Disables unload protection on search form.
  [href]

- Adds the ability to remove parts of a reservation (timespans).
  [href]

1.1.1 (2014-08-06)
------------------

- Fixes a bug where reserving a heterogenous group of reservations would
  sometimes lead to wrongly reserved spots.
  [href]

- The availability of partly available allocations in the search view is
  now limited to the time selected in the search.
  [href]
