@@ -5,6 +5,13 @@ Changelog
 1.2.0 (unreleased)
 ------------------
 
+*Warning*: The seantis.reservation release 1.2.0 changed a lot internally,
+which is why you can't directly upgrade from seantis.reservation releases
+prior to 1.0.12 (September 27th, 2013) to the 1.2.0.
+
+If you do have such an old release, install seantis.reservation 1.1.5 first,
+run all upgrade steps, and then install 1.2.0.
+
 - Moves the core to a new, plone-independent Python Module (Libres). 
   [href]
 
